[workspace.package]
homepage = "https://whispercash.com/"
documentation = "https://dapps.gear.rs"
authors = ["Sushmit <sushmitsarmah@gmail.com>"]
version = "1.1.0"
license = "MIT"
edition = "2021"
publish = false

[workspace]
resolver = "2"
# Keep in the lexicographic order!
members = [
    "escrow",
    "escrow/state",
    "gear-lib-old",
    "sharded-fungible-token",
    "sharded-fungible-token/logic",
    "sharded-fungible-token/storage",
]

[workspace.dependencies]
# Local contracts
# Keep in the lexicographic order!

sharded-fungible-token.path = "sharded-fungible-token"
sharded-fungible-token-logic.path = "sharded-fungible-token/logic"
sharded-fungible-token-storage.path = "sharded-fungible-token/storage"

# Local IO-crates
# Keep in the lexicographic order!

escrow-io.path = "escrow/io"
sharded-fungible-token-io.path = "sharded-fungible-token/io"
sharded-fungible-token-logic-io.path = "sharded-fungible-token/logic/io"
sharded-fungible-token-storage-io.path = "sharded-fungible-token/storage/io"
# Local libraries
# Keep in the lexicographic order!

gear-lib-old.path = "gear-lib-old"
gear-lib-derive.path = "gear-lib-old/derive"

# Gear

gstd = "1.1.0"
gear-wasm-builder = "1.1.0"
gmeta = "1.1.0"
gclient = "1.1.0"
gtest = { git = "https://github.com/gear-tech/gear", tag = "v1.1.0" }
gear-core = "1.1.0"

# External

primitive-types = { version = "0.12", default-features = false }
sp-core = { version = "22", default-features = false, features = ["full_crypto", "sp-externalities"] }
sp-core-hashing = { version = "10", default-features = false }
tokio = "1"
blake2-rfc = "0.2"
hex-literal = "0.4"
hex = { version = "0.4", default-features = false }
async-trait = "0.1"
rand = { version = "0.8", default-features = false }
rand_xoshiro = "0.6"
indexmap = { version = "2", default-features = false }
ahash = { version = "0.8", default-features = false, features = ["no-rng"] }
schnorrkel = { version = "0.10", default-features = false, features = ["u64_backend"] }
syn = { version = "2", default-features = false }
quote = "1"
clap = { version = "4", default-features = false, features = ["std"] }
enum-iterator = "1"
xshell = "0.2"
anyhow = "1"
sha2 = "0.10"
num-traits = { version = "0.2", default-features = false }
scale-info = { version = "2", default-features = false }
parity-scale-codec = { version = "3", default-features = false }
